Fix [UI] Table row - Keep 3 dots Icon visible while menu is open

--- a/src/common/RoundedIcon/roundedIcon.scss
+++ b/src/common/RoundedIcon/roundedIcon.scss
@@ -35,7 +35,8 @@
       content: '';
     }
 
-    &:hover {
+    &:hover,
+    &-active {
       &::before {
         opacity: 1;
       }
